# W2-data-work

./: .gitignore  README.md  district_area.json  district_map.json  main.py  pyproject.toml
data/processed/: _run_meta.json  analytics_table.parquet  orders.parquet  orders_clean.parquet  output.md  users.parquet
data/raw/: .~lock.Aqar_data.csv#  d.sh
data/reports/: revenue_by_country.csv
notebooks/: eda.ipynb
reports/: summary.md
scripts/: data.html  output.json  run_day1_load.py  run_day2_clean.py  run_day2_load.py  run_day3_build_analytics.py  run_day3_transform.py  run_day4.py  run_day5.ipynb  run_etl.py  testd1.sh  testd2.sh  testd3.sh
src/: io.py
src/bootcamp_data/: config.py  etl.py  io.py  joins.py  quality.py  transforms.py
